--- a/client/app/component/app.html
+++ b/client/app/component/app.html
@@ -1,4 +1,4 @@
 <!-- Place all UI elements intended to be present across all routes in this file -->
-<div class="app">
-  <div ui-view></div>
-</div>
+<h5>
+  {{$ctrl.name}}
+</h5>
